--- a/performance/index.html
+++ b/performance/index.html
@@ -4,7 +4,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Cherow: Speed Comparisons</title>
+  <title>Meriyah: Speed Comparisons</title>
   <meta name="viewport" content="width=device-width" />
   <link rel="stylesheet" href="assets/foundation.min.css">
   <link rel="stylesheet" href="assets/style.css">
