--- a/performance/index.html
+++ b/performance/index.html
@@ -28,7 +28,7 @@ window.onload = function () {
       <nav class="top-bar">
         <ul>
           <li class="name">
-             <h1><a href="https://github.com/cherow/cherow">Cherow</a></h1>
+             <h1><a href="https://github.com/meriyah/meriyah">Meriyah</a></h1>
           </li>
         </ul>
         <section>
