fix: fixed styles and tweak links

--- a/repl-src/index.html
+++ b/repl-src/index.html
@@ -4,6 +4,7 @@
   <title>Meriyah</title>
   <meta charset="UTF-8">
   <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css" integrity="sha256-PF6MatZtiJ8/c9O9HQ8uSUXr++R9KBYu4gbNG5511WE=" crossorigin="anonymous" />
   $css
 </head>
 <body>
