--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css" integrity="sha256-PF6MatZtiJ8/c9O9HQ8uSUXr++R9KBYu4gbNG5511WE=" crossorigin="anonymous" />
-  <link href="/meriyah/styles/styles.7d66ee88.css" rel="stylesheet"/>
+  <link href="/meriyah/docs/styles/styles.7d66ee88.css" rel="stylesheet"/>
 </head>
 <body>
 
@@ -14,7 +14,7 @@
     var global = window;
     var exports = {};
   </script>
-<script type="text/javascript" src="/meriyah/app.5fb6f54e.js"></script>
+<script type="text/javascript" src="/meriyah/docs/app.06981ecc.js"></script>
 </body>
 </html>
 
