--- a/performance/index.html
+++ b/performance/index.html
@@ -9,8 +9,7 @@
   <link rel="stylesheet" href="assets/foundation.min.css">
   <link rel="stylesheet" href="assets/style.css">
   <script src="compare.js"></script>
-  <script src="3rdparty/benchmark.js"></script>
-  <script src="3rdparty/XMLHttpRequest.js"></script>
+  <script src="benchmark.js"></script>
 <script>
 /*jslint browser:true, sloppy:true */
 /*global setupBenchmarks:true*/
@@ -27,20 +26,13 @@ window.onload = function () {
     <div class="twelve columns">
       <nav class="top-bar">
         <ul>
-          <li class="name">
-             <h1><a href="https://github.com/meriyah/meriyah">Meriyah</a></h1>
+          <li>
+            <a href="..">Meriyah Playground</a>
+          </li>
+          <li>
+            <a href="https://github.com/meriyah/meriyah">GitHub</a>
           </li>
         </ul>
-        <section>
-          <ul class="right">
-            <li>
-              <a href="..">Demo</a>
-            </li>
-            <li>
-              <a href=".">Speed Comparison</a>
-            </li>
-          </ul>
-        </section>
       </nav>
     </div>
   </div>
@@ -48,7 +40,7 @@ window.onload = function () {
   <!-- Title and subtitle -->
   <div class="row">
     <div class="twelve columns">
-      <h3 class="subheader"><strong>Speed Comparison</strong> adapted from <a href="http://esprima.org/test/compare.html">Esprima's Speed Comparison</a></h3>
+      <h3 class="subheader"><strong>Meriyah Speed Comparison</strong> adapted from <a href="http://esprima.org/test/compare.html">Esprima's Speed Comparison</a></h3>
     </div>
   </div>
 
@@ -57,18 +49,11 @@ window.onload = function () {
     <div class="twelve columns">
 
 <p>
-<input id="runwarm" class="medium radius button secondary" type="submit" value="Run speed comparison with warm JIT" disabled />
-<input id="runcold" class="medium radius button" type="submit" value="Run speed comparison with cold JIT" disabled />
+<input id="runwarm" class="medium radius button secondary" type="submit" value="Run speed comparison" disabled />
 </p>
-
-<p class="explanation">With the warm JIT benchmark, all benchmark cycles are run in the same thread. This allows the JIT compiler to heavily optimize the parsers, simulating parsing very many files at once, but can also lead to over-optimizing for parsing a specific file.</p>
-<p class="explanation">With the cold JIT benchmark, we start a new thread (Web Worker) for every benchmark cycle, to simulate parsing a single file for the first time.</p>
-<p class="explanation">In both cases, the reported times only include parsing the listed files, not loading and executing the parser's script file.</p>
 
 <p id="status">Please wait...</p>
 <p id="result"></p>
-
-        <p>Every parser produces the syntax tree with location marking in every syntax node.</p>
 
         <p>Time measurement is carried out using <a href="http://benchmarkjs.com" target="_blank">Benchmark.js</a><span id="benchmarkjs-version"></span>.</p>
 
