--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-<script src="https://unpkg.com/codemirror@5"></script>
-<script src="https://unpkg.com/codemirror@5/mode/javascript/javascript.js"></script>
-<script src="https://unpkg.com/codemirror@5/mode/xml/xml.js"></script>
-<script src="https://unpkg.com/codemirror@5/mode/jsx/jsx.js"></script>
-<link href="https://unpkg.com/codemirror@5/lib/codemirror.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/codemirror@5/lib/codemirror.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/codemirror@5/mode/javascript/javascript.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/codemirror@5/mode/xml/xml.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/codemirror@5/mode/jsx/jsx.js"></script>
+<link href="https://cdn.jsdelivr.net/npm/codemirror@5/lib/codemirror.css" rel="stylesheet">
 <style>
   html {
     height: 100%;
@@ -67,8 +67,9 @@
 <body v-scope="App()">
 
 <script type="module">
-import { createApp } from 'https://unpkg.com/petite-vue?module';
-import { parse, version } from 'https://unpkg.com/meriyah/dist/meriyah.min.mjs';
+import { createApp } from 'https://cdn.jsdelivr.net/npm/petite-vue/+esm';
+import { parse, version } from 'https://cdn.jsdelivr.net/npm/meriyah/+esm';
+import { codeFrameColumns } from 'https://cdn.jsdelivr.net/npm/@babel/code-frame/+esm';
 
 let sourceEditor, resultEditor;
 
@@ -96,8 +97,14 @@ function App() {
         const result = parse(this.source, this.options);
         return JSON.stringify(result, null, 2);
       } catch (e) {
-        console.trace(e);
-        return e.message;
+        // babel code-frame uses 1 based column?!
+        const babelLoc = {
+          start: { line: e.loc.start.line, column: e.loc.start.column + 1},
+          end: { line: e.loc.end.line, column: e.loc.end.column + 1},
+        }
+
+        const pretty = codeFrameColumns(this.source, babelLoc);
+        return `${e.message}\n\n${pretty}`;
       }
     },
     updateResult(content) {
@@ -131,7 +138,7 @@ createApp({ App }).mount();
 <template id="app">
   <div class="app" @vue:mounted="mounted">
     <div class="left-panel">
-      <img src="/images/meriyah.png" class="mx-auto d-block" alt="meriyah" width="130">
+      <img src="images/meriyah.png" class="mx-auto d-block" alt="meriyah" width="130">
       <div class="mx-3 d-flex">
         <a href="performance" class="btn btn-sm btn-light flex-fill">Benchmark</a>
         <a href="https://github.com/meriyah/meriyah" class="btn btn-sm btn-light flex-fill ms-1">GitHub</a>
